<resources>
    <string name="app_name">BLE Tool</string>
    <string name="action_scan">Scan</string>
    <string name="action_clear">Clear</string>
    <string name="action_sortby_address">Sort By Address</string>
    <string name="action_sortby_name">Sort By Name</string>
    <string name="action_sortby_signal_level_rssi">Sort By RSSI</string>
    <string name="action_sortby_age">Sort By Age</string>
    <string name="action_sortby_timeout_remaining">Sort By Timeout Remaining</string>

    <!-- BleTool -->
    <string name="scanning">Scanning…</string>
    <string name="waiting_for_bluetooth">Waiting for Bluetooth…</string>
    <string name="notification_scanning_channel_description">Channel for scanning foreground notification</string>
    <!--
    <string name="notification_left_behind_channel_description">Channel for notifying if device is lost</string>
    <string name="notification_left_behind_text">Device left behind</string>
    -->

    <!-- Ble scan error messages -->
    <string name="error_bluetooth_not_available">Bluetooth is not available</string>
    <string name="error_bluetooth_disabled">Enable bluetooth and try again</string>
    <string name="error_location_permission_missing">On Android 6.0 location permission is required. Please enable it in phone settings</string>
    <string name="error_location_services_disabled">Location services need to be enabled on Android 6.0</string>
    <string name="error_scan_failed_already_started">Scan with the same filters is already started</string>
    <string name="error_scan_failed_application_registration_failed">Failed to register application for bluetooth scan</string>
    <string name="error_scan_failed_feature_unsupported">Scan with specified parameters is not supported</string>
    <string name="error_scan_failed_internal_error">Scan failed due to internal error</string>
    <string name="error_scan_failed_out_of_hardware_resources">Scan cannot start due to limited hardware resources</string>
    <string name="error_undocumented_scan_throttle">Android 7+ does not allow more scans.</string>
    <string name="error_undocumented_scan_throttle_retry">Try in %d seconds</string>
    <string name="error_bluetooth_cannot_start">Unable to start scanning</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="error_no_message">No message found for reason=%d. Consider adding one.</string>
</resources>
